--- a/tools/json/config.network.json
+++ b/tools/json/config.network.json
@@ -39,12 +39,12 @@
                     "condition": "[[ -f /etc/netplan/armbian.yaml ]]"
                 },
                 {
-                    "id": "NEA002",
+                    "id": "NEA001",
                     "description": "Advanced bridged network configuration",
                     "short": "Advanced",
                     "sub": [
                         {
-                            "id": "NEA001",
+                            "id": "NEA002",
                             "description": "Add / change interface",
                             "short": "Add or Change",
                             "command": [
@@ -55,7 +55,7 @@
                             "condition": ""
                         },
                         {
-                            "id": "NEA002",
+                            "id": "NEA003",
                             "description": "Revert to Armbian defaults",
                             "command": [
                                 "default_network_config"
@@ -65,7 +65,7 @@
                             "condition": ""
                         },
                         {
-                            "id": "NEA003",
+                            "id": "NEA004",
                             "description": "Show configuration",
                             "command": [
                                 "show_message <<< \"$(netplan get all)\""
@@ -75,7 +75,7 @@
                             "condition": "[[ -f /etc/netplan/armbian.yaml ]]"
                         },
                         {
-                            "id": "NEA004",
+                            "id": "NEA005",
                             "description": "Show active status",
                             "command": [
                                 "show_message <<< \"$(netplan status --all)\""
@@ -87,7 +87,7 @@
                     ]
                 },
                 {
-                    "id": "WG001",
+                    "id": "WRG001",
                     "description": "WireGuard VPN client / server",
                     "short": "WireGuard",
                     "command": [
@@ -98,7 +98,7 @@
                     "condition": "! module_wireguard status"
                 },
                 {
-                    "id": "WG002",
+                    "id": "WRG002",
                     "description": "WireGuard remove",
                     "about": "This operation will remove WireGuard",
                     "command": [
@@ -109,7 +109,7 @@
                     "condition": "module_wireguard status"
                 },
                 {
-                    "id": "WG003",
+                    "id": "WRG003",
                     "description": "WireGuard clients QR codes",
                     "command": [
                         "module_wireguard qrcode"
@@ -119,7 +119,7 @@
                     "condition": "module_wireguard status"
                 },
                 {
-                    "id": "WG004",
+                    "id": "WRG004",
                     "description": "WireGuard purge with data folder",
                     "about": "This operation will purge WireGuard with data folder",
                     "command": [
@@ -130,7 +130,7 @@
                     "condition": "module_wireguard status"
                 },
                 {
-                    "id": "BT001",
+                    "id": "BLU001",
                     "description": "Install Bluetooth support",
                     "command": [
                         "see_current_apt ",
@@ -142,7 +142,7 @@
                     "condition": "! pkg_installed bluetooth && ! pkg_installed bluez && ! pkg_installed bluez-tools"
                 },
                 {
-                    "id": "BT002",
+                    "id": "BLU002",
                     "description": "Remove Bluetooth support",
                     "command": [
                         "see_current_apt ",
@@ -154,7 +154,7 @@
                     "condition": "pkg_installed bluetooth || pkg_installed bluez || pkg_installed bluez-tools"
                 },
                 {
-                    "id": "BT003",
+                    "id": "BLU003",
                     "description": "Bluetooth Discover",
                     "about": "This will enable bluetooth and discover devices\n",
                     "command": [
