--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -1218,6 +1218,75 @@
                     ]
                 },
                 {
+                    "id": "Armbian",
+                    "description": "Armbian infrastructure services",
+                    "sub": [
+                        {
+                            "id": "ART001",
+                            "description": "Router for repository mirror automation",
+                            "short": "CDN router",
+                            "command": [
+                                "module_armbianrouter install"
+                            ],
+                            "status": "Stable",
+                            "author": "@efectn",
+                            "condition": "! module_armbianrouter status"
+                        },
+                        {
+                            "id": "ART002",
+                            "description": "Remove CDN router",
+                            "command": [
+                                "module_armbianrouter remove"
+                            ],
+                            "status": "Stable",
+                            "author": "@efectn",
+                            "condition": "module_armbianrouter status"
+                        },
+                        {
+                            "id": "GHR001",
+                            "description": "GitHub runners for Armbian automation",
+                            "short": "GH runners",
+                            "command": [
+                                "module_armbian_runners install"
+                            ],
+                            "status": "Stable",
+                            "author": "@efectn",
+                            "condition": "! module_armbian_runners status"
+                        },
+                        {
+                            "id": "GHR002",
+                            "description": "Remove GitHub runners for Armbian automation",
+                            "command": [
+                                "module_armbian_runners remove"
+                            ],
+                            "status": "Stable",
+                            "author": "@efectn",
+                            "condition": "module_armbian_runners status"
+                        },
+                        {
+                            "id": "RSD001",
+                            "description": "Rsyncd server",
+                            "short": "Rsyncd server",
+                            "command": [
+                                "module_armbian_rsyncd install"
+                            ],
+                            "status": "Stable",
+                            "author": "@igorpecovnik",
+                            "condition": "! module_armbian_rsyncd status"
+                        },
+                        {
+                            "id": "RSD002",
+                            "description": "Remove Armbian rsyncd server",
+                            "command": [
+                                "module_armbian_rsyncd remove"
+                            ],
+                            "status": "Stable",
+                            "author": "@igorpecovnik",
+                            "condition": "module_armbian_rsyncd status"
+                        }
+                    ]
+                },
+                {
                     "id": "DevTools",
                     "description": "Applications and tools for development",
                     "sub": [
@@ -1243,47 +1312,6 @@
                             "status": "Stable",
                             "author": "@armbian",
                             "condition": "pkg_installed git"
-                        },
-                        {
-                            "id": "ART001",
-                            "description": "Armbian router for repository mirror automation",
-                            "short": "Armbian CDN router",
-                            "command": [
-                                "module_armbianrouter install"
-                            ],
-                            "status": "Stable",
-                            "author": "@efectn",
-                            "condition": "! module_armbianrouter status"
-                        },
-                        {
-                            "id": "ART002",
-                            "description": "Remove Armbian router",
-                            "command": [
-                                "module_armbianrouter remove"
-                            ],
-                            "status": "Stable",
-                            "author": "@efectn",
-                            "condition": "module_armbianrouter status"
-                        },
-                        {
-                            "id": "RSD001",
-                            "description": "Armbian rsyncd server",
-                            "command": [
-                                "module_armbian_rsyncd install"
-                            ],
-                            "status": "Stable",
-                            "author": "@igorpecovnik",
-                            "condition": "! module_armbian_rsyncd status"
-                        },
-                        {
-                            "id": "RSD002",
-                            "description": "Remove Armbian rsyncd server",
-                            "command": [
-                                "module_armbian_rsyncd remove"
-                            ],
-                            "status": "Stable",
-                            "author": "@igorpecovnik",
-                            "condition": "module_armbian_rsyncd status"
                         }
                     ]
                 },
